# yaavg

./: .gitignore  CMakeLists.txt  config.h.cmake.in  configure.ac
doc/: design.tex  schedule.tex  texture.tex  video.tex
m4/: CheckPackages.m4  CheckSystem.m4
src/: CMakeLists.txt  Makefile.am  test_opengl.c  test_read_pngfile.c  test_texture.c  test_video.c
src/common/: CMakeLists.txt  Makefile.am  debug.c  debug.h  defs.h  exception.c  exception.h  geometry.h  list.h  math.h  mm.c  mm.h  test_debug.c  test_debug2.c  test_exception.c  test_exception2.c  test_exception3.c  test_geom.c  test_read_pngfile.c  utils.c  utils.h  utils_common.c  utils_linux.c  utils_png.c  utils_png.h  utils_png_bitmap.c  utils_png_rw.c  utils_sdl.c
src/econfig/: CMakeLists.txt  Makefile.am  econfig.c  econfig.h  econfig.lo  libconfig.la  libeconfig.la  test_econfig.c
src/econfig/.libs/: libeconfig.la
src/event/: CMakeLists.txt  Makefile.am  event.h  event_glx.c  event_sdl.c
src/math/: CMakeLists.txt  math.c  math.h  matrix.c  matrix.h  modelview.c  modelview.h  sqrt.h  test_math.c  trigon.c  trigon.h  vector.h
src/resource/: CMakeLists.txt  Makefile.am  bitmap.c  bitmap.h  resource.c  resource.h  test_bitmap.c
src/spikes/: Makefile.am  test_exception.c  test_sdl.c
src/video/: CMakeLists.txt  Makefile.am  engine.c  engine.h  engine_driver.h  engine_gl.c  engine_gl.h  engine_gl_sdl.c  generate_gl_funcs.py  gl3_fix.h  gl_funcs_list  glx_fix.h  glx_funcs_list  mesa_fix.h  rcommand.c  rcommand.h  rlist.c  rlist.h  test_rlist.c  texture.c  texture.h  texture_gl.c  texture_gl.h  utils_x11.c  utils_x11.h  vcommand.h  video.c  video.h  video_driver.h  video_engine.h  video_gl.c  video_gl.h  video_gl_glx.c  video_gl_sdl.c  video_screenshot.c  vmatrix.h  x_common.h
src/video.bak/: engine.c  engine.h  engine_driver.h  engine_gl.c  engine_gl.h  engine_gl_sdl.c  rcommand.c  rcommand.h  rlist.c  rlist.h  test_rlist.c  video.h
